# pytest-allure-id2history

./: .gitignore  LICENSE  README.rst  mkdocs.yml  pyproject.toml
docs/: index.md
src/pytest_allure_id2history/: listener.py  plugin.py
tests/: test_allure_id2history.py
