[build-system]
requires = [
  "setuptools>=61.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-allure-id2history"
description = "Overwrite allure history id with testcase full name and testcase id if testcase has id, exclude parameters."
version = "0.1.1"
readme = "README.rst"
requires-python = ">=3.8"
authors = [
    { name = "pytest-allure-id2history", email = "ryaningli@foxmail.com" },
]
maintainers = [
    { name = "pytest-allure-id2history", email = "ryaningli@foxmail.com" },
]
license = {file = "LICENSE"}
classifiers = [
    "Framework :: Pytest",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pytest>=6.2.0",
    "allure-pytest>=2.4.0"
]
[project.urls]
Repository = "https://github.com/Ryaningli/pytest-allure-id2history"
[project.entry-points.pytest11]
allure-id2history = "pytest_allure_id2history.plugin"
